--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                 </div>
                 <div class="col-md-6 col-sm-12 text-end">
                     <img class="footer_icon" src="resources/facebook.png" alt="facebook">
-                    <img class="footer_icon" src="resources/instagram.png" alt="facebook">
+                    <img class="footer_icon" src="resources/linkin.png" alt="facebook">
                     <img class="footer_icon" src="resources/twitter.png" alt="facebook">
                     <img class="footer_icon" src="resources/youtube.png" alt="facebook">
-                    <img class="footer_icon" src="resources/instagram2.png" alt="facebook">
+                    <img class="footer_icon" src="resources/instagram.png" alt="facebook">
                 </div>
             </div>
         </div>
