--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                     mus. Donec quam felis, ultricies nec, pellentesque eu, pretium<br>
                     quis, sem. Nulla consequat massa quis enim.
                 </div>
+                <button class="navbar_button mt-5">Purchase Now</button>
             </div>
         </div>
     </div>
