--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     mus. Donec quam felis, ultricies nec, pellentesque eu, pretium<br>
                     quis, sem. Nulla consequat massa quis enim.
                 </div>
-                <button class="navbar_button mt-5">Purchase Now</button>
+                <button class="content_button content_button--solid mt-5">Purchase Now</button>
             </div>
         </div>
     </div>
